--- a/index.html
+++ b/index.html
@@ -37,57 +37,59 @@
 
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do Cartão" class="cartao__imagem">
+
+        <article class="cartao cartao--destaque destaque-video">
+            <img src="./assets/img/banner-mobile_1.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_1.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em Destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <h3 class="cartao__titulo">HZC - Life is... / 2021</h3>
                 <p class="cartao__perfil">Bruno Lopez</p>
                 <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 Visualizações</p>
+                <p class="cartao__info cartao__info--visualizacao">53 Visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
             </div>
         </article>
 
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes videos-recentes">
             <h3 class="cartao__titulo">Vídeos recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="./assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Vol. 3</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="./assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="./assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagi - Guerreiros do Asfalto</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="./assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagi - Não Importa o Nível</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
             </ul>
         </article>
 
-        <section class="secao">
+        <section class="secao secao-videos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
                     <p class="cartao__info cartao__info--tempo">33 Minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
@@ -96,7 +98,7 @@
                 <img src="./assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Enter The Hu-flez</h3>
                     <p class="cartao__info cartao__info--tempo">33 Minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
@@ -104,8 +106,8 @@
             <article class="cartao">
                 <img src="./assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">HZC - Vol.3</h3>
                     <p class="cartao__info cartao__info--tempo">33 Minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
@@ -114,93 +116,104 @@
                 <img src="./assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Love Machine</h3>
                     <p class="cartao__info cartao__info--tempo">33 Minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
 
-        <article class="cartao cartao--recentes">
-            <h3 class="cartao__titulo">Vídeos recentes</h3>
+        <article class="cartao cartao--recentes produtos-recentes">
+            <h3 class="cartao__titulo">Novas Artes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Sem Título 01</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Sem Título 02</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Segurança</h4>
+                    <p class="cartao__item-perfil">Raphael Gibson</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Malunguisse</h4>
+                    <p class="cartao__item-perfil">Carolina Canavarro</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Coroa da Converse</h4>
+                    <p class="cartao__item-perfil">Nikolas de Murtas</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Segurança</h4>
+                    <p class="cartao__item-perfil">Raphael Gibson</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Sem Título 03</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
                 </li>
             </ul>
         </article>
 
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do Cartão" class="cartao__imagem">
+        <article class="cartao cartao--destaque destaque-produtos">
+            <img src="./assets/img/banner-mobile_2.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_2.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
-                <p class="cartao__destaque">Vídeo em Destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 Visualizações</p>
-                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
+                <p class="cartao__destaque">Nova Arte</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">João ZMS</p>
+                <p class="cartao__info cartao__info--valor">50,00</p>
+                <p class="cartao__info cartao__info--visualizacao">53 Visualizações</p>
+                <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar Agora</button>
             </div>
         </article>
 
-        <section class="secao">
+        <section class="secao secao-produtos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">IBM</h3>
+                    <p class="cartao__info cartao__info--valor">50,00</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="./assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">Huflez Crew Club</h3>
+                    <p class="cartao__info cartao__info--valor">50,00</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="./assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">Corujita Noturna</h3>
+                    <p class="cartao__info cartao__info--valor">50,00</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="./assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 Minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">GGG - Gat</h3>
+                    <p class="cartao__info cartao__info--valor">50,00</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
