--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <h2 class="titulo-pagina">Início</h2>
 
         <article class="cartao cartao--destaque destaque-video">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner-mobile_1.png" alt="Banner do Cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_1.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em Destaque</p>
@@ -166,7 +167,8 @@
         </article>
 
         <article class="cartao cartao--destaque destaque-produtos">
-            <img src="./assets/img/banner-mobile_2.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner-mobile_2.png" alt="Banner do Cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_2.png" alt="Banner do Cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Nova Arte</p>
